Play-199 fixed currency kit alignment

--- a/playbook/app/pb_kits/playbook/pb_currency/_currency.scss
+++ b/playbook/app/pb_kits/playbook/pb_currency/_currency.scss
@@ -49,7 +49,7 @@
 
     & > [class*=dollar_sign] {
       display: flex;
-      align-items: flex-start;
+      align-self: flex-start;
     }
     & > [class*=unit] {
       display: flex;
